--- a/index.html
+++ b/index.html
@@ -814,7 +814,18 @@
                 version: '1.0',
                 filepath: './Constitutions/CanadaEmployment.html',
                 description: 'National standards for AI systems used in employment screening and hiring, ensuring fair treatment, transparency, and candidate rights while maintaining human decision-making authority.'
-            }
+            },
+            {
+    id: 'uae-work-permits',
+    name: 'AI Work Permit Processing - UAE',
+    jurisdiction: 'Ministry of Human Resources and Emiratisation',
+    flag: '🇦🇪',
+    authority: 'MoHRE',
+    effectiveDate: 'Jan 15, 2026',
+    version: '1.0',
+    filepath: './Constitutions/UAEWorkPermits.html',
+    description: 'Framework for the "Eye" AI system processing work permits in the UAE, ensuring fair treatment across 80+ nationalities, protecting worker rights, and maintaining human decision authority while enabling efficient document verification for 1.8M+ workforce.'
+}
             // Add more constitutions here following the same format
         ];
         // ============================================================================
