--- a/index.html
+++ b/index.html
@@ -825,6 +825,17 @@
     version: '1.0',
     filepath: './Constitutions/UAEWorkPermits.html',
     description: 'Framework for the "Eye" AI system processing work permits in the UAE, ensuring fair treatment across 80+ nationalities, protecting worker rights, and maintaining human decision authority while enabling efficient document verification for 1.8M+ workforce.'
+},
+            {
+    id: 'japan-healthcare',
+    name: 'AI Healthcare Diagnostic Systems - Japan',
+    jurisdiction: 'Ministry of Health, Labour and Welfare / PMDA',
+    flag: '🇯🇵',
+    authority: 'MHLW/PMDA',
+    effectiveDate: 'Jan 15, 2026',
+    version: '1.0',
+    filepath: './Constitutions/JapanHealthcare.html',
+    description: 'Framework for AI diagnostic systems (EndoBRAIN, Nodoca, AIM, Fujifilm NURA) in Japanese healthcare, with special emphasis on protecting elderly patients (29.3% of population 65+) and ensuring equity across rural and urban settings.'
 }
             // Add more constitutions here following the same format
         ];
