--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 </div>
 
                 <div class="section-header" style="margin-top: 48px;">
-                    <div class="section-title">Published Constitutions</div>
+                    <div class="section-title">Sample Constitutions</div>
                     <div class="section-subtitle">Explore our growing library of AI governance frameworks</div>
                 </div>
 
